--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
     "express": "^4.19.1",
+    "express-joi-validation": "^5.0.1",
+    "joi": "^17.12.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.3"
   }
