--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "express": "^4.19.1",
     "express-joi-validation": "^5.0.1",
     "joi": "^17.12.2",
